--- a/_config.yml
+++ b/_config.yml
@@ -14,18 +14,18 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 lang: en-US
-title: My Awesome Site
+title: Cory Serratore
 email:
-description:
+description: My homepage
 baseurl: # the optional subpath of your site, e.g. "/blog"
-url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url: https://cserratore.github.io"
 author:
-  name:
+  name: Cory Serratore
   twitter:
-  picture:
+  picture:  /assets/images/cserratore.jpg
 twitter_username:
-github_username:
-logo: # path of site logo, e.g. "/assets/images/logo.png"
+github_username: cserratore
+logo: /assets/images/logo.jpg
 
 # Build settings
 markdown: kramdown
