--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ title: Cory Serratore
 email:
 description: My homepage
 baseurl: # the optional subpath of your site, e.g. "/blog"
-url: https://cserratore.github.io"
+url: https://cserratore.github.io
 author:
   name: Cory Serratore
   twitter:
