--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -1,23 +1,23 @@
 - profile: Hello
   initials: CS
   name: Cory Serratore
-  email: Y29yeS5zZXJyYXRvcmVAZ21haWwuY29t
   profession: Software Architect and Developer
   image: images/profile.jpg
   location: Burlington, CA
   relocation: false
   company: AudienceView
   for_hire: false
-  focus: Gatsby Web Sites and App Shells
-  focus_url: https://gatsbyjs.org
-  about: |
-    I'm a software architect, coach, mentor, leader and developer with a passion for building maintainable reactive systems.
+  focus: Reactive Domain Driven Design
+  focus_url: https://www.reactivemanifesto.org/
+  about: I'm a software architect, coach, mentor, leader and developer with a passion for building maintainable reactive systems.
 
   skills:
     - Reactive Systems
-    - Clean Architecture
     - Domain Driven Design
-    - Coaching, Mentoring, Learning
+    - Clean Architecture
+    - Coaching
+    - Mentoring
+    - Learning
   tools:
     - C4/Miro/LucidChart
     - Java/Spring Boot, Javascript/NodeJS, C++, SQL
