--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -19,7 +19,7 @@
     - Mentoring
     - Learning
   tools:
-    - C4/Miro/LucidChart
+    - C4, Miro, LucidChart
     - Java/Spring Boot, Javascript/NodeJS, C++, SQL
   budget:
     currency: $
