fixed work history typo

--- a/content/work-history.yaml
+++ b/content/work-history.yaml
@@ -15,7 +15,7 @@
 
 - company: SITA
   position: Senior Software Developer
-  period: 2004 - D2005
+  period: 2004 - 2005
   url: https://sita/aero
 
 - company: i2 Technologies
