--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@wkocjan/gatsby-theme-intro": "^2.0.0",
     "gatsby": "^3.3.0",
-    "gh-pages": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
