--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -22,3 +22,8 @@
     - C4, Miro, LucidChart
     - Java/Spring Boot, Javascript/NodeJS, C++, SQL
   budget:
+    currency: $
+    min: 0
+    max: 0
+    default: 0
+    
