--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -7,20 +7,21 @@
   relocation: false
   company: AudienceView
   for_hire: false
-  focus: Reactive Domain Driven Design
+  focus: Fast Flow Microservice Platform Development
   focus_url: https://www.reactivemanifesto.org/
-  about: I'm a software architect, coach, mentor, leader and developer with a passion for building maintainable reactive systems.
+  about: I'm a software architect, coach, mentor, leader and developer with a passion for building scalable and responsive systems.
 
   skills:
-    - Reactive Systems
-    - Domain Driven Design
-    - Clean Architecture
-    - Learning
+    - Complex problem & solution space analysis & design
+    - Domain & Event Driven Design
+    - Reactive Systems Design
+    - Consulting
     - Coaching
     - Mentoring
   tools:
+    - Architecture and design patterns and practices
+    - Java/Spring Boot, Javascript/NodeJS, C++, Kafka, Akka, SQL
     - C4, Miro, LucidChart
-    - Java/Spring Boot, Javascript/NodeJS, C++, SQL
   budget:
     currency: $
     min: 0
