--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -7,9 +7,10 @@
   relocation: false
   company: AudienceView
   for_hire: false
-  focus: Reactive Microservice SaaS Platforms
+  focus: Reactive Systems
   focus_url: https://www.reactivemanifesto.org/
-  about: I'm a software architect, coach, mentor, leader and developer with a passion for building scalable and responsive systems.
+  about: Cory Serratore is a software leader with over 25 years of professional experience spanning enterprise, startups, professional services, and product development. He has written software for a variety of business domains such as supply chain management, logistics, aviation, and live events and ticketing. 
+  He has a passion for helping organizations scale their software platforms both organizationally and operationally.
 
   skills:
     - Problem Space Analysis
@@ -23,7 +24,7 @@
     - Event Storming
     - Architecture patterns, practices, and technologies
     - Java, Javascript, C++
-    - Spring Boot, Node.js, Kafka, Akka, SQL
+    - Akka, Spring Boot, Node.js, Kafka
     - AWS, Microsoft Azure
     - C4, Miro, LucidChart
   budget:
