Fixed multi-line value that caused parsing failure

--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -9,8 +9,7 @@
   for_hire: false
   focus: Reactive Systems
   focus_url: https://www.reactivemanifesto.org/
-  about: Cory Serratore is a software leader with over 25 years of professional experience spanning enterprise, startups, professional services, and product development. He has written software for a variety of business domains such as supply chain management, logistics, aviation, and live events and ticketing. 
-  He has a passion for helping organizations scale their software platforms both organizationally and operationally.
+  about: Cory Serratore is a software leader with over 25 years of professional experience spanning enterprise, startups, professional services, and product development. He has written software for a variety of business domains such as supply chain management, logistics, aviation, and live events and ticketing. He has a passion for helping organizations scale their software platforms both organizationally and operationally.
 
   skills:
     - Problem Space Analysis
