--- a/package.json
+++ b/package.json
@@ -1,5 +1,22 @@
 {
+  "name": "cory-serratore",
+  "version": "1.0.0",
+  "private": true,
+  "description": "cory-serratore",
+  "author": "Cory Serratore",
+  "keywords": [
+    "gatsby"
+  ],
+  "scripts": {
+    "develop": "gatsby develop",
+    "start": "gatsby develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean"
+  },
   "dependencies": {
-    "@rennehir/gatsby-theme-personal-site": "^1.1.1"
+    "gatsby": "^5.3.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
